Add header and navigation elements with home, menu, and about buttons

--- a/src/index.html
+++ b/src/index.html
@@ -5,5 +5,15 @@
     <title>Restaurant page</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"></head>
   <body>
+	<header>
+		<nav>
+		<button id="homeBtn" class="homeBtn">Home</button>
+		<button id="menuBtn" class="menuBtn">Menu</button>
+		<button id="aboutBtn" class="aboutBtn">About</button>
+		</nav>
+	</header>
+
+	<div id="content"></div>
+
   </body>
 </html>
