--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,10 @@
 		</nav>
 	</header>
 
-	<div id="content"></div>
+	<div id="content">
+		<h1>Welcome to my restaurant</h1>
+		
+	</div>
 
   </body>
 </html>
