Fix issue with CSS bundling in webpack configuration

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Restaurant page</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"></head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
   <body>
 	<header>
 		<nav>
@@ -15,7 +16,7 @@
 
 	<div id="content">
 		<h1>Welcome to my restaurant</h1>
-		
+
 	</div>
 
   </body>
