--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <title>Restaurant page</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="index.css">
 </head>
   <body>
 	<header>
@@ -14,12 +13,10 @@
 		<button id="aboutBtn" class="aboutBtn">About</button>
 		</nav>
 	</header>
-
+	<main>
 	<div id="content">
-		<h1>Urban Bites</h1>
-
-
+<p>Hello</p>
 	</div>
-
+</main>
   </body>
 </html>
